--- a/translation/dest/oauthScope/sq-AL.xml
+++ b/translation/dest/oauthScope/sq-AL.xml
@@ -1,32 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <string name="newAccessToken">Token i ri personal përdorimi API</string>
-  <string name="tokenGrantsPermission">Një token u akordon personave të tjerë leje të përdorin llogarinë tuaj.</string>
-  <string name="carefullySelect">Përzgjidhni me kujdes ç’lejohet të bëjnë më këmbë tuajën.</string>
-  <string name="tokenDescription">Përshkrim token-i</string>
-  <string name="rememberTokenUse">Që të kujtoheni se për çfarë është ky token</string>
-  <string name="whatTheTokenCanDo">Ç’mund të bëhet përmes token-it më këmbë tuajën:</string>
-  <string name="doNotShareIt">Token-i do të akordojë hyrje te llogaria juaj. MOS ia jepni njeriu!</string>
-  <string name="copyTokenNow">Mos harroni ta kopjoni token-in tuaj të ri tani. S’do të jeni në gjendje ta shihni më prapë!</string>
-  <string name="preferenceRead">Parapëlqime leximi</string>
-  <string name="preferenceWrite">Parapëlqime shkrimi</string>
-  <string name="emailRead">Adresë email leximi</string>
-  <string name="challengeRead">Të lexojë sfida që vijnë</string>
-  <string name="challengeWrite">Të dërgojë, pranojë dhe hedhë poshtë sfida</string>
-  <string name="challengeBulk">Të krijojë disa lojëra njëherësh për lojtarë të tjerë</string>
-  <string name="studyRead">Të lexojë ushtrime dhe transmetime private</string>
-  <string name="studyWrite">Të krijojë, përditësojë, fshijë ushtrime dhe transmetime</string>
-  <string name="tournamentWrite">Të krijojë, përditësojë dhe marrë pjesë në turne</string>
-  <string name="teamRead">Të lexojë informacion privat ekipi</string>
-  <string name="teamWrite">Të marrë pjesë apo të braktisë ekipe</string>
-  <string name="teamLead">Të administrojë ekipe që drejtoni: të dërgojë mesazhe private, të përzërë anëtarë</string>
-  <string name="followRead">Të lexojë lojtarë të ndjekur</string>
-  <string name="followWrite">Të ndjekë dhe të heqë nga ndjekja lojtarë të tjerë</string>
-  <string name="msgWrite">Të dërgojë mesazhe private te lojtarë të tjerë</string>
-  <string name="boardPlay">Të luajë lojëra me API fushe</string>
-  <string name="botPlay">Të luajë lojëra me API roboti</string>
-  <string name="engineRead">Të shohë dhe të përdorë platforma tuajat të jashtme</string>
-  <string name="engineWrite">Të krijojë dhe përditësoje platforma të jashtme</string>
-  <string name="webLogin">Të krijojë sesioni të mirëfilltësuar të sajtit (të akordojë hyrje të plotë!)</string>
-  <string name="webMod">Të përdorë mjete moderatori (brenda kufijve të lejuar prej jush)</string>
+  <string name="newAccessToken">Shenja e re personale e qasjes në API</string>
+  <string name="tokenGrantsPermission">Një shenjë u jep personave të tjerë leje për të përdorur llogarinë tuaj.</string>
+  <string name="carefullySelect">Zgjidhni me kujdes se çfarë lejohet të bëjë në emrin tuaj.</string>
+  <string name="tokenDescription">Përshkrimi i tokenit</string>
+  <string name="rememberTokenUse">Kështu që ju mbani mend se për çfarë shërben kjo shenjë</string>
+  <string name="whatTheTokenCanDo">Çfarë mund të bëjë token në emrin tuaj:</string>
+  <string name="doNotShareIt">Shenja do të japë akses në llogarinë tuaj. MOS e ndani me askënd!</string>
+  <string name="copyTokenNow">Sigurohuni që të kopjoni shenjën tuaj të re personale të aksesit tani. Nuk do të mund ta shihni më!</string>
+  <string name="preferenceRead">Lexoni preferencat</string>
+  <string name="preferenceWrite">Shkruani preferencat</string>
+  <string name="emailRead">Lexoni adresën e emailit</string>
+  <string name="challengeRead">Lexoni sfidat e ardhshme</string>
+  <string name="challengeWrite">Dërgoni, pranoni dhe refuzoni sfidat</string>
+  <string name="challengeBulk">Krijo shumë lojëra në të njëjtën kohë për lojtarët e tjerë</string>
+  <string name="studyRead">Lexoni studime dhe transmetime private</string>
+  <string name="studyWrite">Krijoni, përditësoni, fshini studime dhe transmetime</string>
+  <string name="tournamentWrite">Krijoni, përditësoni dhe bashkohuni në turne</string>
+  <string name="racerWrite">Krijoni dhe bashkohuni me garat e enigmës</string>
+  <string name="puzzleRead">Lexoni aktivitetin e enigmës</string>
+  <string name="teamRead">Lexoni informacionin e ekipit privat</string>
+  <string name="teamWrite">Bashkohuni dhe largohuni nga ekipet</string>
+  <string name="teamLead">Menaxhoni skuadrat që drejtoni: dërgoni PM, goditni anëtarët</string>
+  <string name="followRead">Lexoni lojtarët e ndjekur</string>
+  <string name="followWrite">Ndiqni dhe anuloni lojtarët e tjerë</string>
+  <string name="msgWrite">Dërgoni mesazhe private te lojtarët e tjerë</string>
+  <string name="boardPlay">Luaj lojëra me API të tabelës</string>
+  <string name="botPlay">Luaj lojëra me API-në e robotëve</string>
+  <string name="engineRead">Shikoni dhe përdorni motorët tuaj të jashtëm</string>
+  <string name="engineWrite">Krijoni dhe përditësoni motorë të jashtëm</string>
+  <string name="webLogin">Krijoni sesione të vërtetuara në websajt (ju jep hyrje të plotë!)</string>
+  <string name="webMod">Përdorni mjetet e moderatorit (brenda kufijve të lejes suaj)</string>
 </resources>
