New Crowdin updates (#12738)
* New translations: oauthScope.xml (French)

* New translations: site.xml (Ukrainian)

* New translations: site.xml (Greek)

* New translations: site.xml (Ukrainian)

* New translations: site.xml (Greek)

* New translations: patron.xml (Greek)

* New translations: preferences.xml (Greek)

* New translations: site.xml (Odia)

* New translations: site.xml (Odia)

* New translations: emails.xml (Odia)

* New translations: class.xml (Odia)

* New translations: contact.xml (Odia)

* New translations: site.xml (Ukrainian)

* New translations: preferences.xml (Vietnamese)

* New translations: puzzle.xml (Vietnamese)

* New translations: puzzleTheme.xml (Vietnamese)

* New translations: puzzle.xml (Hebrew)

--- a/translation/dest/site/or-IN.xml
+++ b/translation/dest/site/or-IN.xml
@@ -155,12 +155,12 @@
   <string name="username">ଉପଭୋକ୍ତାଙ୍କ ନାମ</string>
   <string name="usernameOrEmail">ଉପଭୋକ୍ତା ନାମ କିମ୍ୱା ଇମେଲ୍</string>
   <string name="changeUsername">ଉପଭୋକ୍ତା ନାମ ପରିବର୍ତ୍ତନ କରନ୍ତୁ</string>
-  <string name="password">ପାସ୍‍ୱାର୍ଡ଼</string>
-  <string name="changePassword">ପାସ୍‍ୱାର୍ଡ଼ ବଦଳାନ୍ତୁ</string>
+  <string name="password">ପାସ୍‌ୱର୍ଡ଼</string>
+  <string name="changePassword">ପାସ୍‌ୱର୍ଡ଼ ବଦଳାନ୍ତୁ</string>
   <string name="changeEmail">ଇମେଲ୍ ପରିବର୍ତ୍ତନ କରନ୍ତୁ</string>
   <string name="email">ଇମେଲ୍</string>
-  <string name="passwordReset">ପାସ୍‍ୱାର୍ଡ଼ ପୁନଃସେଟ୍ କର</string>
-  <string name="forgotPassword">ପାସ୍‍ୱାର୍ଡ଼ ଭୁଲିଗଲେ?</string>
+  <string name="passwordReset">ପାସ୍‌ୱର୍ଡ଼ ପୁନଃସେଟ୍</string>
+  <string name="forgotPassword">ପାସ୍‌ୱର୍ଡ଼ ଭୁଲିଗଲେ?</string>
   <plurals name="nbPuzzles">
     <item quantity="one">%sଟିଏ ପ୍ରହେଳିକା</item>
     <item quantity="other">%sଟି ପ୍ରହେଳିକା</item>
@@ -224,12 +224,12 @@
   <string name="thisTopicIsNowClosed">ଏଇ ପ୍ରକରଣଟି ଏବେ ବନ୍ଦ ହୋଇଯାଇଛି।</string>
   <string name="typePrivateNotesHere">ଘରୋଇ ନୋଟ୍ ଏଠାରେ ଟାଇପ୍ କରନ୍ତୁ</string>
   <string name="writeAPrivateNoteAboutThisUser">ଏହି ଉପଭୋକ୍ତାଙ୍କ ଵିଷୟରେ ଏକ ଘରୋଇ ନୋଟ୍ ଲେଖନ୍ତୁ</string>
-  <string name="invalidUsernameOrPassword">ଅବୈଧ ଉପଭୋକ୍ତାଙ୍କ ନାମ କିମ୍ୱା ପାସ୍‍ୱାର୍ଡ଼</string>
-  <string name="incorrectPassword">ଭୁଲ୍ ପାସ୍‍ୱାର୍ଡ଼</string>
-  <string name="currentPassword">ଏବେକାର ପାସ୍‍ୱାର୍ଡ଼</string>
-  <string name="newPassword">ନୂଆ ପାସ୍‍ୱାର୍ଡ଼</string>
-  <string name="newPasswordAgain">ନୂଆ ପାସ୍‍ୱାର୍ଡ଼ (ପୁନଃ)</string>
-  <string name="newPasswordsDontMatch">ନୂଆ ପାସ୍‍ୱାର୍ଡ଼ଗୁଡ଼ିକ ମେଳ ଖାଉ ନାହିଁ</string>
+  <string name="invalidUsernameOrPassword">ଅଵୈଧ ଉପଭୋକ୍ତାଙ୍କ ନାମ କିମ୍ୱା ପାସ୍‌ୱର୍ଡ଼</string>
+  <string name="incorrectPassword">ଭୁଲ ପାସ୍‌ୱର୍ଡ଼</string>
+  <string name="currentPassword">ଏବେକାର ପାସ୍‌ୱର୍ଡ଼</string>
+  <string name="newPassword">ନୂଆ ପାସ୍‌ୱର୍ଡ଼</string>
+  <string name="newPasswordAgain">ନୂଆ ପାସ୍‌ୱର୍ଡ଼ (ପୁନଃ)</string>
+  <string name="newPasswordsDontMatch">ନୂଆ ପାସ୍‌ୱର୍ଡ଼ଗୁଡ଼ିକ ମେଳ ଖାଉ ନାହିଁ</string>
   <string name="privacy">ଗୋପନୀୟତା</string>
   <string name="privacyPolicy">ଗୋପନୀୟତା ନୀତି</string>
   <string name="letOtherPlayersInviteYouToStudy">ଅନ୍ୟ ଖେଳାଳିମାନଙ୍କୁ ଆପଣଙ୍କୁ ଅଧ୍ୟୟନ ପାଇଁ ଆମନ୍ତ୍ରଣ କରିବାକୁ ଦିଅନ୍ତୁ</string>
@@ -259,7 +259,7 @@
   <string name="create">ସୃଷ୍ଟି କରନ୍ତୁ</string>
   <string name="accuracy">ସଠିକତା</string>
   <string name="newTournament">ନୂଆ ଟୁର୍ନାମେଣ୍ଟ</string>
-  <string name="weHaveSentYouAnEmailTo">ଆମେ %s କୁ ଏକ ଇମେଲ୍ ପଠାଇଛୁ। ଆପଣଙ୍କ ପାସ୍‍ୱାର୍ଡ଼ ପୁନଃସେଟ୍ କରିବାକୁ ଇମେଲରେ ଥିବା ଲିଙ୍କକୁ କ୍ଲିକ୍ କରନ୍ତୁ।</string>
+  <string name="weHaveSentYouAnEmailTo">ଆମେ %sକୁ ଏକ ଇମେଲ୍ ପଠାଇଛୁ। ଆପଣଙ୍କ ପାସ୍‌ୱର୍ଡ଼ ପୁନଃସେଟ୍ କରିବାକୁ ଇମେଲରେ ଥିବା ଲିଙ୍କ୍‌କୁ କ୍ଲିକ୍ କରନ୍ତୁ।</string>
   <string name="readAboutOur">ଆମର %s ବିଷୟରେ ପଢ଼ନ୍ତୁ।</string>
   <string name="security">ସୁରକ୍ଷା</string>
   <string name="viewTheSolution">ସମାଧାନ ଦେଖନ୍ତୁ</string>
