--- a/translation/dest/site/el-GR.xml
+++ b/translation/dest/site/el-GR.xml
@@ -214,6 +214,7 @@
   <string name="neverTypeYourPassword">Ποτέ μην πληκτρολογήσετε τον κωδικό σας από το Lichess σε άλλον ιστότοπο!</string>
   <string name="proceedToX">Μεταβείτε στο %s</string>
   <string name="passwordSuggestion">Μην ορίσετε τον κωδικό πρόσβασης που σας πρότεινε κάποιος άλλος. Θα χρησιμοποιηθεί για να κλαπεί ο λογαριασμός σας.</string>
+  <string name="emailSuggestion">Μη χρησιμοποιήσετε email που στάλθηκε από κάποιον άλλο. Θα το χρησιμοποιήσουν για να κλέψουν τον λογαριασμό σας.</string>
   <string name="emailConfirmHelp">Βοήθεια για την επιβεβαίωση email</string>
   <string name="emailConfirmNotReceived">Δε λάβατε το email επιβεβαίωσης μετά την εγγραφή;</string>
   <string name="whatSignupUsername">Τι όνομα χρήστη χρησιμοποιήσατε για να εγγραφείτε;</string>
@@ -390,6 +391,7 @@
   <string name="importGame">Εισαγωγή παιχνιδιού</string>
   <string name="importGameExplanation">Επικολλήστε PGN παιχνιδιού για να δημιουργήσετε περιηγήσιμη αναπαραγωγή, 
 ανάλυση από υπολογιστή, συνομιλία παιχνιδιού και κοινόχρηστο URL.</string>
+  <string name="importGameCaveat">Οι παραλλαγές θα διαγραφούν. Για να τις κρατήσετε εισάγεται το PGN μέσω μιας μελέτης.</string>
   <plurals name="nbImportedGames">
     <item quantity="one">%s Εισαγόμενο παιχνίδι</item>
     <item quantity="other">%s Εισαγόμενα παιχνίδια</item>
@@ -661,6 +663,8 @@
   <string name="simulClockHint">Ρολόι Φίσερ. Όσους περισσότερους παίκτες παίξετε, τόσο περισσότερο χρόνο ίσως χρειαστείτε.</string>
   <string name="simulAddExtraTime">Μπορείτε να προσθέσετε επιπλέον χρόνο στο ρολόι σας για να βοηθηθείτε.</string>
   <string name="simulHostExtraTime">Παροχή επιπλέον χρόνου στο ρολόι</string>
+  <string name="simulAddExtraTimePerPlayer">Προσθήκη χρόνου στο ρολόι κάθε παίκτη που συνδέεται στο σιμουλτανέ.</string>
+  <string name="simulHostExtraTimePerPlayer">Προσθήκη επιπλέον χρόνου ανά παίκτη</string>
   <string name="lichessTournaments">Πρωταθλήματα lichess</string>
   <string name="tournamentFAQ">Τεκμηρίωση πρωταθλημάτων τύπου αρένας</string>
   <string name="timeBeforeTournamentStarts">Χρόνος προτού ξεκινήσει το πρωτάθλημα</string>
@@ -777,6 +781,7 @@
   <string name="bestWasX">Το καλύτερο ήταν %s</string>
   <string name="youBrowsedAway">Απομακρυνθήκατε</string>
   <string name="resumePractice">Συνεχίσετε την πρακτική</string>
+  <string name="drawByFiftyMoves">Ισοπαλία λόγω του κανόνα των 50 κινήσεων.</string>
   <string name="theGameIsADraw">Η παρτίδα είναι ισόπαλη.</string>
   <string name="computerThinking">Ο υπολογιστής σκέφτεται ...</string>
   <string name="seeBestMove">Δείτε την καλύτερη κίνηση</string>
