--- a/translation/dest/site/si-LK.xml
+++ b/translation/dest/site/si-LK.xml
@@ -199,6 +199,27 @@
   <string name="error.namePassword">sinhala</string>
   <string name="blankedPassword">sinhala</string>
   <string name="youAreLeavingLichess">sinhala</string>
+  <string name="neverTypeYourPassword">ඔබේ Lichess මුරපදය වෙනත් වෙබ් අඩවියක ටයිප් නොකරන්න!</string>
+  <string name="proceedToX">%s වෙත යන්න</string>
+  <string name="passwordSuggestion">වෙනත් කෙනෙකු විසින් යෝජනා කරන ලද මුරපදයක් නොසකසන්න. ඔවුන් ඔබේ ගිණුම සොරකම් කිරීමට එය භාවිතා කරනු ඇත.</string>
+  <string name="emailSuggestion">වෙනත් කෙනෙකු විසින් යෝජනා කරන ලද ඊමේල් ලිපිනයක් නොසකසන්න. ඔවුන් ඔබේ ගිණුම සොරකම් කිරීමට එය භාවිතා කරනු ඇත.</string>
+  <string name="emailConfirmHelp">ඊමේල් තහවුරු කිරීම සඳහා උදව් කරන්න</string>
+  <string name="emailConfirmNotReceived">ලියාපදිංචි වීමෙන් පසු ඔබගේ තහවුරු කිරීමේ ඊමේල් නොලැබුනේද?</string>
+  <string name="whatSignupUsername">ඔබ ලියාපදිංචි වීමට භාවිතා කළ පරිශීලක නාමය කුමක්ද?</string>
+  <string name="usernameNotFound">අපට මෙම නමින් කිසිදු පරිශීලකයෙකු සොයා ගත නොහැකි විය: %s.</string>
+  <string name="usernameCanBeUsedForNewAccount">නව ගිණුමක් සෑදීමට ඔබට මෙම පරිශීලක නාමය භාවිතා කළ හැක</string>
+  <string name="emailSent">අපි %s වෙත විද්‍යුත් තැපෑලක් යවා ඇත.</string>
+  <string name="emailCanTakeSomeTime">පැමිණීමට යම් කාලයක් ගත විය හැකිය.</string>
+  <string name="refreshInboxAfterFiveMinutes">මිනිත්තු 5ක් රැඳී සිට ඔබගේ විද්‍යුත් තැපැල් පෙට්ටිය නැවුම් කරන්න.</string>
+  <string name="checkSpamFolder">එසේම, ඔබේ අයාචිත තැපැල් ෆෝල්ඩරය පරීක්ෂා කරන්න, එය එහි අවසන් විය හැක. එසේ නම්, එය ස්පෑම් නොවන ලෙස සලකුණු කරන්න.</string>
+  <string name="emailForSignupHelp">අනෙක් සියල්ල අසාර්ථක නම්, අපට මෙම විද්‍යුත් තැපෑල එවන්න:</string>
+  <string name="copyTextToEmail">ඉහත අකුරු පිටපත් කර අලවා %s වෙත යවන්න</string>
+  <string name="waitForSignupHelp">ඔබගේ ලියාපදිංචිය සම්පූර්ණ කිරීමට ඔබට උදවු කිරීමට අපි ඉක්මනින්ම ඔබ වෙත එන්නෙමු.</string>
+  <string name="accountConfirmed">පරිශීලක %s සාර්ථකව තහවුරු කර ඇත.</string>
+  <string name="accountCanLogin">ඔබට දැන් %s ලෙස පුරනය විය නොහැක.</string>
+  <string name="accountConfirmationEmailNotNeeded">ඔබට තහවුරු කිරීමේ විද්‍යුත් තැපෑලක් අවශ්‍ය නොවේ.</string>
+  <string name="accountClosed">%s ගිණුම වසා ඇත.</string>
+  <string name="accountRegisteredWithoutEmail">%s ගිණුම ඊමේල් එකක් නොමැතිව ලියාපදිංචි කර ඇත.</string>
   <string name="rank">ශ්‍රේණිය</string>
   <string name="rankX">ශ්‍රේණිය %s</string>
   <plurals name="rankIsUpdatedEveryNbMinutes">
@@ -253,9 +274,22 @@ You are playing chess.</string>
   <string name="send">යවන්න</string>
   <string name="incrementInSeconds">එකතුවෙන තප්පර ගණන</string>
   <string name="freeOnlineChess">නොමිලේ මර්ගගත චෙස්</string>
+  <plurals name="nbRated">
+    <item quantity="one">%s ශ්‍රේණිගත කර ඇත</item>
+    <item quantity="other">%s ශ්‍රේණිගත කර ඇත</item>
+  </plurals>
+  <plurals name="nbLosses">
+    <item quantity="one">%s loss</item>
+    <item quantity="other">%s loss</item>
+  </plurals>
+  <plurals name="nbDraws">
+    <item quantity="one">%s draw</item>
+    <item quantity="other">%s draws</item>
+  </plurals>
   <string name="exportGames">තරග ආනයනය කරන්න</string>
   <string name="ratingRange">ශ්‍රේණිගත පරාසය</string>
   <string name="thisAccountViolatedTos">මෙම ගිණුම Lichess සේවා කොන්දේසි උල්ලංඝනය කර ඇත</string>
+  <string name="openingExplorerAndTablebase">Opening explorer &amp; වගු පදනම</string>
   <string name="takeback">ආපසු ගැනීම</string>
   <string name="proposeATakeback">ආපසු ගැනීමක් යෝජනා කරන්න</string>
   <string name="takebackPropositionSent">ආපසු ගැනීම යවන ලදී</string>
@@ -273,17 +307,73 @@ You are playing chess.</string>
   </plurals>
   <string name="viewTournament">තරඟාවලිය බලන්න</string>
   <string name="backToTournament">තරඟාවලිය වෙත ආපසු</string>
+  <string name="thematic">තේමාත්මක</string>
+  <plurals name="moreThanNbRatedGames">
+    <item quantity="one">≥ %s rated game</item>
+    <item quantity="other">≥ %s rated games</item>
+  </plurals>
+  <plurals name="moreThanNbPerfRatedGames">
+    <item quantity="one">≥ %1$s %2$s rated game</item>
+    <item quantity="other">≥ %1$s %2$s rated games</item>
+  </plurals>
+  <plurals name="needNbMorePerfGames">
+    <item quantity="one">ඔබ තව %1$s %2$s අගයන ලද ක්‍රීඩාවක් ක්‍රීඩා කිරීමට අවශ්‍යයි</item>
+    <item quantity="other">ඔබ තව %1$s %2$s අගයන ලද ක්‍රීඩාවක් ක්‍රීඩා කිරීමට අවශ්‍යයි</item>
+  </plurals>
+  <string name="yourPerfRatingIsProvisional">ඔබගේ %s ශ්‍රේණිගත කිරීම තාවකාලිකයි</string>
+  <string name="yourPerfRatingIsTooHigh">ඔබේ %1$s ඇගයීම (%2$s) ඉතා ඉහළයි</string>
+  <string name="yourTopWeeklyPerfRatingIsTooHigh">ඔබේ ඉහළම සතිපතා %1$s ඇගයීම (%2$s) ඉතා ඉහළය</string>
+  <string name="yourPerfRatingIsTooLow">ඔබගේ %1$s ඇගයීම (%2$s) ඉතා අඩුය</string>
+  <string name="ratedMoreThanInPerf">Rated ≥ %1$s in %2$s</string>
+  <string name="ratedLessThanInPerf">පසුගිය සතිය සඳහා %2$s තුළ ≤ %1$s ලෙස ශ්‍රේණිගත කර ඇත</string>
   <string name="mustBeInTeam">කණ්ඩායමේ සිටිය යුතුය %s</string>
   <string name="youAreNotInTeam">ඔබ %s කණ්ඩායමේ නැත</string>
   <string name="backToGame">නැවත තරගය සඳහා</string>
   <string name="siteDescription">නොමිලේ මාර්ගගත චෙස් සේවාදායකය. පිරිසිදු අතුරු මුහුණතක චෙස් ක්‍රීඩා කරන්න. ලියාපදිංචිය නැත, දැන්වීම් නැත, ප්ලගිනය අවශ්‍ය නොවේ. පරිගණකය, මිතුරන් හෝ අහඹු විරුද්ධවාදීන් සමඟ චෙස් ක්‍රීඩා කරන්න.</string>
   <string name="xJoinedTeamY">%1$s කණ්ඩායමට %2$s එක් විය</string>
   <string name="xCreatedTeamY">%1$s කණ්ඩායම %2$s සාදන ලදී</string>
+  <string name="startedStreaming">streaming ආරම්භ විය</string>
   <string name="averageElo">සාමාන්ය ශ්රේණිගත කිරීම</string>
   <string name="location">ස්ථානය</string>
+  <string name="filterGames">පෙරහන් games</string>
   <string name="reset">යළි පිහිටුවන්න</string>
   <string name="apply">ඉදිරිපත් කරන්න</string>
   <string name="save">සුරකින්න</string>
+  <string name="leaderboard">Leaderboard</string>
+  <string name="screenshotCurrentPosition">තිර රුව වත්මන් ස්ථානය</string>
+  <string name="gameAsGIF">GIF ලෙස ක්‍රීඩාව</string>
+  <string name="pasteTheFenStringHere">FEN පෙළ මෙහි අලවන්න</string>
+  <string name="pasteThePgnStringHere">PGN පෙළ මෙහි අලවන්න</string>
+  <string name="orUploadPgnFile">නැතහොත් PGN ගොනුවක් උඩුගත කරන්න</string>
+  <string name="fromPosition">තනතුරේ සිට</string>
+  <string name="continueFromHere">මෙතැන් සිට ඉදිරියට යන්න</string>
+  <string name="toStudy">අධ්‍යයනය</string>
+  <string name="importGame">ක්‍රීඩාව ආනයනය කරන්න</string>
+  <string name="importGameExplanation">බ්‍රවුස් කළ හැකි නැවත ධාවනයක් ලබා ගැනීමට PGN ක්‍රීඩාවක් අලවන්න,
+පරිගණක විශ්ලේෂණය, ක්‍රීඩා කතාබස් සහ බෙදාගත හැකි URL.</string>
+  <string name="wins">ජය ලබයි</string>
+  <string name="losses">Losses</string>
+  <string name="createdBy">නිර්මාණය කළේ</string>
+  <string name="tournamentIsStarting">තරගාවලිය ආරම්භ වේ</string>
+  <string name="tournamentPairingsAreNowClosed">තරඟාවලි යුගල දැන් වසා ඇත.</string>
+  <string name="standByX">%s ළඟ සිටින්න, ක්‍රීඩකයන් යුගල කරන්න, සූදානම් වන්න!</string>
+  <string name="pause">විරාමය</string>
+  <string name="resume">යලි අරඹන්න</string>
+  <string name="youArePlaying">ඔබ සෙල්ලම් කරනවා!</string>
+  <string name="winRate">ජයග්රාහී අනුපාතය</string>
+  <string name="berserkRate">බර්සර්ක් අනුපාතය</string>
+  <string name="performance">කාර්ය සාධනය</string>
+  <string name="tournamentComplete">තරඟාවලිය අවසන්</string>
+  <string name="movesPlayed">ක්‍රීඩා කල Moves ගණන</string>
+  <string name="whiteWins">සුදු ජය ගනී</string>
+  <string name="blackWins">කළු දිනුම්</string>
+  <string name="draws">ඩ්‍රෝ</string>
+  <string name="nextXTournament">මීළඟ %s තරඟාවලිය:</string>
+  <string name="averageOpponent">Average ප්රතිවාදියා</string>
+  <string name="boardEditor">Board සංස්කාරක</string>
+  <string name="setTheBoard">පුවරුව සකසන්න</string>
+  <string name="popularOpenings">Popular openings</string>
+  <string name="endgamePositions">අවසන් ක්‍රීඩා තනතුරු</string>
   <string name="victoryVsYInZ">%3$s හි %1$s එදිරිව %2$s</string>
   <string name="defeatVsYInZ">%3$s හි %1$s එදිරිව %2$s</string>
   <string name="drawVsYInZ">%3$s හි %1$s එදිරිව %2$s</string>
