--- a/translation/source/site.xml
+++ b/translation/source/site.xml
@@ -866,6 +866,8 @@ computer analysis, game chat and shareable URL.</string>
   <string name="useTheReportForm">use the report form</string>
   <string name="toRequestSupport">To request support, %1$s</string>
   <string name="tryTheContactPage">try the contact page</string>
+  <string name="makeSureToRead">Make sure to read %1$s</string>
+  <string name="theForumEtiquette">the forum etiquette</string>
   <string name="thisTopicIsArchived">This topic has been archived and can no longer be replied to.</string>
   <string name="joinTheTeamXToPost">Join the %1$s, to post in this forum</string>
   <string name="teamNamedX">%1$s team</string>
