Fix typo in challenge translations, ts lint issue
Guess I made a typo in my `sed` replacement command. Thankfully I have
`sed` to fix it.

--- a/translation/dest/challenge/af-ZA.xml
+++ b/translation/dest/challenge/af-ZA.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <string named="challengesx">Uitdagings: %1$s</string>
+  <string name="challengesx">Uitdagings: %1$s</string>
   <string name="challengeToPlay">Daag uit tot \'n spel</string>
   <string name="challengeDeclined">Uitdaging afgewys</string>
   <string name="challengeAccepted">Uitdaging aanvaar!</string>
