--- a/translation/dest/challenge/cs-CZ.xml
+++ b/translation/dest/challenge/cs-CZ.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <string named="challengesx">Výzvy: %1$s</string>
+  <string name="challengesx">Výzvy: %1$s</string>
   <string name="challengeToPlay">Vyzvat k partii</string>
   <string name="challengeDeclined">Výzva odmítnuta</string>
   <string name="challengeAccepted">Výzva přijata!</string>
