--- a/translation/dest/challenge/eo-UY.xml
+++ b/translation/dest/challenge/eo-UY.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <string named="challengesx">Defioj: %1$s</string>
+  <string name="challengesx">Defioj: %1$s</string>
   <string name="challengeToPlay">Defii al nova ludo</string>
   <string name="challengeDeclined">Defio malakceptita</string>
   <string name="challengeAccepted">Defio akceptita!</string>
