--- a/translation/dest/challenge/fi-FI.xml
+++ b/translation/dest/challenge/fi-FI.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <string named="challengesx">Haasteet: %1$s</string>
+  <string name="challengesx">Haasteet: %1$s</string>
   <string name="challengeToPlay">Haasta peliin</string>
   <string name="challengeDeclined">Haasteesta kieltäydyttiin</string>
   <string name="challengeAccepted">Haaste hyväksytty!</string>
