--- a/translation/dest/challenge/ga-IE.xml
+++ b/translation/dest/challenge/ga-IE.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <string named="challengesx">Dúshláin: %1$s</string>
+  <string name="challengesx">Dúshláin: %1$s</string>
   <string name="challengeToPlay">Dúshlán cluiche</string>
   <string name="challengeDeclined">Dúshlán diúltaithe</string>
   <string name="challengeAccepted">Dúshlán glactha!</string>
