--- a/translation/dest/challenge/hi-IN.xml
+++ b/translation/dest/challenge/hi-IN.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <string named="challengesx">चुनौतियों: %1$s</string>
+  <string name="challengesx">चुनौतियों: %1$s</string>
   <string name="challengeToPlay">एक खेल के लिए चुनौती</string>
   <string name="challengeDeclined">चुनौती इंकार कर दिया</string>
   <string name="challengeAccepted">चुनौती स्वीकार की गई!</string>
