--- a/translation/dest/challenge/lt-LT.xml
+++ b/translation/dest/challenge/lt-LT.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <string named="challengesx">Iššūkiai: %1$s</string>
+  <string name="challengesx">Iššūkiai: %1$s</string>
   <string name="challengeToPlay">Iškelti iššūkį</string>
   <string name="challengeDeclined">Iššūkis atmestas</string>
   <string name="challengeAccepted">Iššūkis priimtas!</string>
