--- a/translation/dest/challenge/ms-MY.xml
+++ b/translation/dest/challenge/ms-MY.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <string named="challengesx">Cabaran: %1$s</string>
+  <string name="challengesx">Cabaran: %1$s</string>
   <string name="challengeToPlay">Cabaran permainan</string>
   <string name="challengeDeclined">Cabaran ditolak</string>
   <string name="challengeAccepted">Cabaran diterima!</string>
