--- a/translation/dest/challenge/pl-PL.xml
+++ b/translation/dest/challenge/pl-PL.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <string named="challengesx">Wyzwania: %1$s</string>
+  <string name="challengesx">Wyzwania: %1$s</string>
   <string name="challengeToPlay">Zaproś do gry</string>
   <string name="challengeDeclined">Wyzwanie odrzucone</string>
   <string name="challengeAccepted">Wyzwanie zaakceptowane!</string>
