--- a/translation/dest/challenge/ro-RO.xml
+++ b/translation/dest/challenge/ro-RO.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <string named="challengesx">Provocări: %1$s</string>
+  <string name="challengesx">Provocări: %1$s</string>
   <string name="challengeToPlay">Provoacă la o partidă</string>
   <string name="challengeDeclined">Provocare refuzată</string>
   <string name="challengeAccepted">Provocare acceptată!</string>
