--- a/translation/dest/challenge/sk-SK.xml
+++ b/translation/dest/challenge/sk-SK.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <string named="challengesx">Výzvy: %1$s</string>
+  <string name="challengesx">Výzvy: %1$s</string>
   <string name="challengeToPlay">Vyzvať na partiu</string>
   <string name="challengeDeclined">Výzva odmietnutá</string>
   <string name="challengeAccepted">Výzva prijatá!</string>
