--- a/translation/dest/challenge/sw-KE.xml
+++ b/translation/dest/challenge/sw-KE.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <string named="challengesx">Mwito wa kuja kushindana: %1$s</string>
+  <string name="challengesx">Mwito wa kuja kushindana: %1$s</string>
   <string name="challengeToPlay">Mwito wa kuja kushindana kwa mchezo</string>
   <string name="challengeDeclined">Mwito wa kuja kushindana umekataliwa</string>
   <string name="challengeAccepted">Mwito wa kuja kushindana umekubaliwa!</string>
