--- a/translation/dest/challenge/tp-TP.xml
+++ b/translation/dest/challenge/tp-TP.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <string named="challengesx">musi utala: %1$s</string>
+  <string name="challengesx">musi utala: %1$s</string>
   <string name="challengeToPlay">wile musi</string>
   <string name="challengeDeclined">ona li wile ala musi</string>
   <string name="challengeAccepted">ona li wile musi a!</string>
