--- a/translation/dest/challenge/uz-UZ.xml
+++ b/translation/dest/challenge/uz-UZ.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <string named="challengesx">Chorlovlar: %1$s</string>
+  <string name="challengesx">Chorlovlar: %1$s</string>
   <string name="challengeToPlay">O\'yinga chorlov</string>
   <string name="challengeDeclined">Chorlovni rad etildi</string>
   <string name="challengeAccepted">Chorlov qabul qilindi!</string>
