--- a/translation/dest/challenge/vi-VN.xml
+++ b/translation/dest/challenge/vi-VN.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-  <string named="challengesx">Thách đấu: %1$s</string>
+  <string name="challengesx">Thách đấu: %1$s</string>
   <string name="challengeToPlay">Yêu cầu chơi</string>
   <string name="challengeDeclined">Lời thách đấu bị từ chối</string>
   <string name="challengeAccepted">Lời thách đấu được chấp nhận!</string>
